[gd_scene load_steps=2 format=2]

[ext_resource path="res://Godot Assets/Code/Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -46.0
margin_right = 68.5
margin_bottom = 46.0

[node name="FullScreenButton" type="Button" parent="VBoxContainer"]
margin_right = 137.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../ReturnButton")
text = "Toggle Full Screen"

[node name="SoundButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 137.0
margin_bottom = 44.0
text = "Toggle Sound"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 137.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../FullScreenButton")
text = "Return"

[connection signal="pressed" from="VBoxContainer/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
